--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Sistema de Facturación Electrónica Perú" />
     
     <title>Facturador Electrónico - Perú</title>
-    
+
     <!-- Fuente Inter -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,5 +19,8 @@
   <body>
     <noscript>Necesitas activar JavaScript para ejecutar esta aplicación.</noscript>
     <div id="root"></div>
+
+    <!-- 🚨 IMPORTANTE: montar tu app React -->
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
