--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,26 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#667eea" />
-    <meta name="description" content="Sistema de Facturación Electrónica Perú" />
-    
-    <title>Facturador Electrónico - Perú</title>
-
-    <!-- Fuente Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Facturador Electrónico Perú</title>
+    <script type="module" src="/src/main.jsx"></script>
   </head>
   <body>
-    <noscript>Necesitas activar JavaScript para ejecutar esta aplicación.</noscript>
     <div id="root"></div>
-
-    <!-- 🚨 IMPORTANTE: montar tu app React -->
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
